# ailogproc

./: .gitignore  .pylintrc  Jenkinsfile  Makefile  PROJECT_INFO.md  QUICKSTART.md  README.md  SETUP.md  main.py  pyproject.toml  requirements.txt  setup.py  setup_venv.bat  setup_venv.sh
.github/workflows/: ci.yml  coverage.yml  pylint.yml
config/: .coveragerc  .pylintrc  README.md  default_config.py  pytest.ini
docs/: CI_DESIGN.md  CODE_QUALITY_REVIEW.md  COVERAGE.md  PERFORMANCE_LOG_ARCHITECTURE.md  PERF_SUMMARY.md  PLUGINS_OVERVIEW.md  PLUGIN_DEPENDENCIES.md  QUALITY_GATE.md  README.md  REFACTORING_GUIDE.md  WORKFLOW.md
examples/: binary_export_example.py  constraint_checker_demo.py  data_parser_example.py
examples/logs/: sample_log_opsch.txt
examples/templates/: template_a_column.xlsx  template_a_column_multi_sheets.xlsx  template_a_column_multi_sheets_auto_high.xlsx
logs/: README.md
scripts/: check_coverage.sh  check_quality.sh
src/: excel_processor.py  log_parser.py  utils.py  workflow.py
src/commands/: __init__.py  cfg2excel.py  cfglimit.py  perflog.py  registry.py
src/plugins/: __init__.py  base.py
src/plugins/auto_filename/: README.md  __init__.py  config.yaml  plugin.py
src/plugins/config_extractor/: __init__.py  config.yaml  plugin.py
src/plugins/config_parser/: README.md  __init__.py  plugin.py
src/plugins/constraint_checker/: README.md  __init__.py  config.yaml  plugin.py
src/plugins/constraint_checker/rules/: EXAMPLES.md  README.md  v1.0.0_20240115.yaml  v1.1.0_20240208.yaml  v1.2.0_20240208.yaml  v1.3.0_20240208.yaml  v1.4.0_20240210.yaml  versions.yaml
src/plugins/data_parser/: FEATURES.md  README.md  __init__.py  config.yaml  plugin.py
src/plugins/dld_configtmp/: README.md  config.yaml  plugin.py
src/plugins/dld_tmp/: __init__.py
src/plugins/excel_writer/: README.md  __init__.py  config.yaml  data_models.py  plugin.py  processor.py
src/plugins/perf_analyzer/: README.md  __init__.py  config.yaml  plugin.py
src/plugins/perf_parser/: README.md  __init__.py  config.yaml  plugin.py
src/plugins/perf_visualizer/: README.md  __init__.py  config.yaml  plugin.py
src/plugins/trace_parser/: __init__.py  config.yaml  plugin.py
src/utils/: __init__.py  constants.py  log_utils.py  logger.py  logger_config.yaml  security.py
tests/: README.md  __init__.py  test_excel_processor.py  test_multi_top_mode.py  test_plugins.py
tests/commands/: __init__.py  test_commands.py
tests/integration/: __init__.py  test_constraint_checker_complex.py  test_duplicate_subtable_constraints.py  test_multi_top_mode.py  test_subtable_constraints.py  test_workflow.py  test_workflow_simple.py
tests/plugins/data_parser/: __init__.py  test_block_mode.py  test_parser.py
tests/plugins/excel_writer/: test_data_models.py
tests/plugins/perf_analyzer/: test_perf_analyzer.py
tests/plugins/perf_visualizer/: test_perf_visualizer.py  test_plugin.py
tests/unit/: __init__.py  test_check_only_mode.py  test_config_parser_advanced.py  test_constraint_associate.py  test_constraint_checker.py  test_duplicate_sections.py  test_excel_processor.py  test_excel_processor_advanced.py  test_flatten_fields.py  test_keyword_placeholder.py  test_plugins.py  test_top_keyword_config.py  test_trace_parser_advanced.py  test_utils.py
tests/utils/: __init__.py  test_security.py
tools/: convert_formulas_to_values.py  migrate_to_logger.py
